--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Función de este archivo</h1>
   <p>Todos los archivos de prueba de este directorio son utilizados únicamente como demostración para la configuración de repositorios en GitHub para las clases de Diseño Web y de UID.</p>
-  
+  <p>2021 | Plácido Luna</p>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
