--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Repositorio de pruebas para clases</title>
+    <title>Archivo de prueba para el repositorio en GitHub</title>
   </head>
   <body>
-    <h1>Función de este archivo</h1>
-  <p>Todos los archivos de prueba de este directorio son utilizados únicamente como demostración para la configuración de repositorios en GitHub para las clases de Diseño Web y de UID.</p>
-  <p>2021 | Plácido Luna</p>
+    <h1>Test para prueba en clases.</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
