--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <h1>Test para prueba en clases.</h1>
+    <p>Plácido | Junio-Julio de 2021</p>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
